--- a/config/settings.yml
+++ b/config/settings.yml
@@ -88,3 +88,6 @@ plugins:
   topic_list_thumbnail_first_x_rows:
     default: 0
     client: true
+  topic_list_social_show_avatars:
+    default: true
+    client: true
